--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,6 @@ pipelines:
         caches:
           - composer
         script:
-          - apt-get update && apt-get install -y unzip
-          - curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-          - composer install
-          - vendor/bin/phpunit
+          - apt-get update 
+          - apt-get -qq install git-ftp
+          - git ftp init --user $FTP_USERNAME --passwd $FTP_PASSWORD ftp://ec2-54-186-236-127.us-west-2.compute.amazonaws.com/var/www/html
