--- a/.htaccess
+++ b/.htaccess
@@ -6,6 +6,7 @@ RewriteRule ^(.*)$ index.php/$1 [L,QSA]
 #Replace above line with below for godday server
 #RewriteRule ^(.*)$ index.php?/$1 [L,QSA] 
 
+#ErrorDocument 403 http://localhost/error-403
 
 <IfModule mod_deflate.c>
 AddOutputFilterByType DEFLATE text/html
